Fix icon buttons collapsing when screen width is less than 416px

--- a/index.html
+++ b/index.html
@@ -106,10 +106,10 @@
                             <h2>Corvus OS<br><span id="js-rotating">FEATURES, SPEEDY, SMOOTHNESS</span></h2>
                             <p class="p-large">Corvus OS is based on AOSP, with all the useful features required. Our objective is stability while being feature-rich at the same time. We won't believe that Corvus is better ROM than others, but we will always try to give you the best.</p>
                             <div class="d-flex justify-content-center">
-                            <a class="btn-solid-lg page-scroll" href="download.html"><i class="fas fa-angle-double-down"></i> Download</a>
-                            <a class="btn-solid-lg popup-with-move-anim" href="#details-lightbox-1"><i class="fas fa-bullhorn"></i>What's new</a>
+                            <a class="btn-solid-lg page-scroll text-nowrap" href="download.html"><i class="fas fa-angle-double-down"></i> Download</a>
+                            <a class="btn-solid-lg popup-with-move-anim text-nowrap" href="#details-lightbox-1"><i class="fas fa-bullhorn"></i>What's new</a>
                             </div>
-                            <div class="d-flex justify-content-center">
+                            <div class="d-flex justify-content-center text-nowrap">
                                 <a class="btn-solid-lg" href="maintainer.html"><i class="fas fa-address-card"></i>Apply for Maintainership</a>
                             </div>
                         </div>
