Web : Fix typos

--- a/index.html
+++ b/index.html
@@ -698,7 +698,7 @@
                     <div id="counter">
                         <div class="cell">
                             <div class="counter-value number-count" data-count="50">1</div>
-                            <p class="counter-info">+ Offcial Devices</p>
+                            <p class="counter-info">+ Official Devices</p>
                         </div>
                         
                         <div class="cell">
