Change raphael maintainer

--- a/download.html
+++ b/download.html
@@ -165,14 +165,14 @@
     <div class="card-header" id="raphael">
       <h2 class="p-large">
         <button class="btn-download-device" type="button" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-          <i class="fas fa-mobile-alt"></i> RAPHAEL
+          <i class="fas fa-mobile-alt"></i> Raphael
         </button>
       </h2>
     </div>
     <div id="collapseTwo" class="collapse" aria-labelledby="raphael" data-parent="#devicelist">
       <div class="card-body">
 
-        <h6>Maintainer:  <span class="blue">Ritzz</span></h6>
+        <h6>Maintainer:  <span class="blue">Sukeerat Singh Goindi(Irongfly)</span></h6>
 		<h6>Device:  <span class="blue">Redmi K20 Pro</span></h6>
 		<h6>Codename:  <span class="blue">Raphael</span></h6>
 		<h6>ROM Status:  <span class="blue">Official</span></h6>
