--- a/privacy.html
+++ b/privacy.html
@@ -46,7 +46,8 @@ ul
 </style>
 
 </head>
-
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1705694363763480"
+     crossorigin="anonymous"></script>    
 <body lang=EN-US link="#0563C1" vlink="#954F72" style='word-wrap:break-word'>
 
 <div class=WordSection1>
