--- a/terms-conditions.html
+++ b/terms-conditions.html
@@ -32,6 +32,8 @@
 	<!-- Favicon  -->
     <link rel="icon" href="images/favicon.png">
 </head>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1705694363763480"
+     crossorigin="anonymous"></script>    
 <body data-spy="scroll" data-target=".fixed-top">
     
     <!-- Preloader -->
