--- a/download.html
+++ b/download.html
@@ -1458,13 +1458,13 @@
     <div id="collapseFortyEight" class="collapse" aria-labelledby="juice" data-parent="#devicelist">
       <div class="card-body">
 
-        <h6>Maintainer: <span class="blue">donjuan</span></h6>
-		<h6>Device: <span class="blue">Poco M3/Redmi 9T/Redmi 9 Power/Redmi Note 9 4G</span></h6>
-		<h6>Codename: <span class="blue">juice</span></h6>
+        <h6>Maintainer: <span class="blue">Nathaniel Quitua</span></h6>
+		<h6>Device: <span class="blue">Poco M3 / Redmi 9T / Redmi 9 Power / Redmi Note 9 4G</span></h6>
+		<h6>Codename: <span class="blue">Juice</span></h6>
 		<h6>ROM Status: <span class="blue">Official</span></h6>
        <hr class="new2">
 		<p>
-	  <a class="btn-solid-lg page-scroll"https://www.pling.com/p/1543242#files-panel" style="margin: 10px"><i class="fas fa-download"></i>Download</a>
+	  <a class="btn-solid-lg page-scroll"https://www.pling.com/p/1590086/" style="margin: 10px"><i class="fas fa-download"></i>Download</a>
 	  <a class="btn-solid-lg popup-with-move-anim" href="#juice-lightbox-1" style="margin: 10px"><i class="fas fa-list"></i>Changelogs</a>
 	  <a class="btn-solid-lg page-scroll" href="https://t.me/CorvusJuice" style="margin: 10px"><i class="fab fa-telegram"></i>Telegram</a>
 	  <a class="btn-solid-lg page-scroll" href="https://forum.xda-developers.com/t/rom-official-corvus-os-v16-5-for-poco-m3-redmi-9t-redmi-9-power-redmi-note-9-4g-juice.4296051/" style="margin: 10px"><i class="fas fa-comments"></i>XDA Thread</a>
