Add Vayu to Official website!

--- a/download.html
+++ b/download.html
@@ -236,6 +236,34 @@
 
                 </div>
                 <!--end of device-->
+		<!--device-->
+		<div class="ex-basic-4">
+                   <div class="card-header" id="vayu">
+                      <h2 class="p-large">
+                          <button class="btn-download-device" type="button" data-toggle="collapse" data-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+          <i class="fas fa-mobile-alt"></i> VAYU
+        </button>
+                        </h2>
+                   </div>
+                   <div id="collapseThree" class="collapse" aria-labelledby="vayu" data-parent="#devicelist">
+                       <div class="card-body">
+
+                          <h6>Maintainer: <span class="blue">KangMonkey</span></h6>
+                          <h6>Device: <span class="blue">POCO X3 Pro</span></h6>
+                          <h6>Codename: <span class="blue">Vayu</span></h6>
+                          <h6>ROM Status: <span class="blue">Official</span></h6>
+                          <hr class="new2">
+                          <p>
+                              <a class="btn-solid-lg page-scroll" href="downloads.corvusrom.com" style="margin: 10px"><i class="fas fa-download"></i>Download</a>
+                              <a class="btn-solid-lg popup-with-move-anim" href="#vayu-lightbox-1" style="margin: 10px"><i class="fas fa-list"></i>Changelog</a>
+                              <a class="btn-solid-lg page-scroll" href="https://t.me/corvusvayu" style="margin: 10px"><i class="fab fa-telegram"></i>Telegram</a>
+                              <a class="btn-solid-lg page-scroll" href="https://forum.xda-developers.com/m/kangmonkey.10219211/" style="margin: 10px"><i class="fas fa-comments"></i>XDA Thread</a>
+                          </p>
+
+                       </div>
+                   </div>
+                </div>
+                <!--end of device-->
                 <!--device-->
                 <div class="ex-basic-4">
                     <div class="card-header" id="beryllium">
