--- a/src/app.html
+++ b/src/app.html
@@ -2,8 +2,10 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8" />
-		<link rel="icon" href="%sveltekit.assets%/favicon.png" />
+		<link rel="icon" href="https://ik.imagekit.io/corvus/Corvus_Logo.svg?tr=w-10" />
 		<meta name="viewport" content="width=device-width" />
+		<title>Corvus AOSP</title>
+		<meta name="description" content="Corvus AOSP is another retarded ROM with many retarded Customizations">
 		%sveltekit.head%
 	</head>
 	<body data-sveltekit-preload-data="hover">
